--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -2,6 +2,21 @@ body {
     background-color: lightblue;
 }
 
+.header {
+    height:50px;
+    background:#F0F0F0;
+    border:1px solid #CCC;
+    width:960px;
+    margin:0px auto;
+}
+.content {
+    width:960px;
+    background: #F0F0F0;
+    border: 1px solid #CCC;
+    height: 2000px;
+    margin: 20px auto;
+}
+
 h1 {
     color: navy;
     margin-left: 20px;
