--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -1,21 +1,7 @@
 body {
-    background-color: lightblue;
+    background-image: url("images/background.jpeg");
 }
 
-.header {
-    height:50px;
-    background:#F0F0F0;
-    border:1px solid #CCC;
-    width:960px;
-    margin:0px auto;
-}
-.content {
-    width:960px;
-    background: #F0F0F0;
-    border: 1px solid #CCC;
-    height: 2000px;
-    margin: 20px auto;
-}
 
 h1 {
     color: navy;
