--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -7,6 +7,10 @@ body {
 
 }
 
+div {
+    display: block;
+    <img src="images/logo.jpg" alt="Logo" style="width:128px;height:128px;">
+}
 
 h1 {
     color: black;
