--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -23,6 +23,7 @@ div.tabContent {
     border: 1px solid #c9c3ba; 
     padding: 0.5em; 
     background-color: #ffffff;
+    float: right;
 }
 
 h1 {
