--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -14,7 +14,8 @@ ul#tabs li a:hover { background-color: #f1f0ee; }
 ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
 
 div.header{
-    display:block;    
+    display:block;  
+    background:black;
 }
 
 div.logo{
