--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -16,11 +16,12 @@ ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bol
 div.header{
     display:block;  
     background-color: #000000;
+    padding: 0;
 }
 
 div.logo{
     display: block;
-    float: left;
+<!--    float: left;-->
 }
 
 div.tabContent {
