--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -16,7 +16,7 @@ ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bol
 div.header{
     display:block;  
     background-color: #000000;
-    padding: 0;
+    margin: 0;
 }
 
 div.logo{
