--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -20,12 +20,12 @@ div.header{
 }
 
 div.logo{
-    float:left;
+    white-space:nowrap;
     padding: 0.5em; 
 }
 
 div.tabContent {
-    float:right;
+    white-space:nowrap;
     padding: 0.5em; 
 }
 
