--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -14,18 +14,22 @@ ul#tabs li a:hover { background-color: #f1f0ee; }
 ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
 
 div.header{
+    float:left;
     display:block;
     background-color: #000000;
     margin: 0;
+    padding: 0;
+    width:100%;
 }
 
 div.logo{
-    white-space:nowrap;
+    float:left;
     padding: 0.5em; 
 }
 
 div.tabContent {
-    white-space:nowrap;
+    float:right;
+    margin-right: 10px;
     padding: 0.5em; 
 }
 
