--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -17,6 +17,7 @@ div.header{
     float:left;
     display:block;
     background-color: #000000;
+    background-size: cover;
     margin: 0;
     padding: 0;
     border: 0;
