--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -1,4 +1,11 @@
+body {
+      background: url(images/background.jpg) no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 
+}
 
 ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
 ul#tabs li { display: inline; }
@@ -10,8 +17,9 @@ div.header{
 
     display:block;
     background-color: #000000;
-    background-size: cover;
-    margin: 0;
+    margin-left: -5px;
+    margin-right: -5px;
+    margin-top: -5px;
     padding: 0;
     border: 0;
     width:100%;
