--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -14,7 +14,7 @@ ul#tabs li a:hover { background-color: #f1f0ee; }
 ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
 
 div.header{
-
+    float: left;
     display:block;
     background-color: #000000;
     margin-left: -5px;
@@ -31,6 +31,7 @@ div.logo{
 }
 
 div.tabContent {
+    float: right;       
     margin-right: 10px;
     padding: 0.5em; 
 }
