--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -14,7 +14,10 @@ ul#tabs li a:hover { background-color: #f1f0ee; }
 ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
 
 div.body{
-      padding-top: 10px;
+      position:relative;
+      padding-top: 260px;
+      padding-right: 25%;
+      padding:left:25%;
       width:50%;
       background-color: white;
 }
