--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -1,6 +1,6 @@
 body {
       background: url(images/background.jpg) no-repeat center center fixed; 
-
+      margin:0;
       background-size: cover;
 
 }
