--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -14,8 +14,8 @@ ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bol
 div.body{
       position: absolute;
       margin-top: 326px;
-      margin-left: 15%;
-      width:70%;
+      margin-left: 0%;
+      width:80%;
       background-color: white;
       height: 66%;
 }
@@ -38,7 +38,7 @@ div.tabContent {
 }
 
 h1 {
-    color: black;
+    color: maroon;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    text-align: left;
 }
