--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -14,14 +14,15 @@ ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bol
 div.body{
       position: absolute;
       margin-top: 326px;
-      margin-left: 0%;
-      width:80%;
+      margin-left: 15%;
+      width:70%;
       background-color: white;
       height: 66%;
 }
 
 p.body{
-      text-align:center;
+      text-align:left;
+      margin-left: 15px;
 }
 
 div.logo{
@@ -41,4 +42,5 @@ h1 {
     color: maroon;
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
+    margin-left: 10px;
 }
