--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -22,7 +22,8 @@ div.body{
 
 p.body{
       text-align:left;
-      margin-left: 80px;
+      margin-left: 135px;
+      margin-right: 148px;
 }
 
 div.logo{
@@ -42,5 +43,6 @@ h1 {
     color: maroon;
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
-    margin-left: 35px;
+    margin-left: 135px;
+    margin-right: 135px;
 }
