--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -39,10 +39,18 @@ div.tabContent {
     float: right;       
 }
 
+hr {
+    margin-left: 135px;
+    margin-right: 150px;
+    height: 3;
+    background-color: maroon;
+}
+
 h1 {
     color: maroon;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive;
     text-align: left;
+    font-size: 35px;
     margin-left: 135px;
     margin-right: 135px;
 }
