--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -25,6 +25,7 @@ p.body{
       margin-left: 135px;
       margin-right: 148px;
       font-size: 19px;
+      background-color: maroon;
 }
 
 div.logo{
