--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -14,7 +14,7 @@ ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bol
 div.body{
       position: absolute;
       margin-top: 373px;
-      margin-left: 15%;
+      margin-left: 3%;
       width:70%;
       background-color: white;
       height: 150%;
@@ -28,12 +28,15 @@ p.body{
 }
 
 div.logo{
-    float:right;
+    float: right;
     position: absolute;
-    padding: 0.5em; 
+    padding-left: 7%;
+    padding-right: 7%;
+    padding-bottom: 135px;
+    padding-top: 10px;
     margin-top: 0px;
-    margin-left: 87%;
-    background-color: maroon;
+    margin-left: 73%;
+    background-color: black;
 }
 
 div.tabContent {
