--- a/HomePageBackground.css
+++ b/HomePageBackground.css
@@ -57,7 +57,7 @@ hr {
 
 h1.sections {
     color: maroon;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: left;
     font-size: 35px;
     margin-left: 135px;
@@ -66,7 +66,7 @@ h1.sections {
 
 h2.logo {
     color: brown;
-    font-family: fantasy;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 26px;
     margin-top: 23px;
